tests/baselines/reference/expandoOnAlias.errors.txt
test.js(4,5): error TS2339: Property 'config' does not exist on type 'typeof Vue'.


==== vue.js (0 errors) ====
    export class Vue {}
    export const config = { x: 0 };
    
==== test.js (1 errors) ====
    import { Vue, config } from "./vue";
    
    // Expando declarations aren't allowed on aliases.
    Vue.config = {};
        ~~~~~~
!!! error TS2339: Property 'config' does not exist on type 'typeof Vue'.
    new Vue();
    
    // This is not an expando declaration; it's just a plain property assignment.
    config.x = 1;
    
    // This is not an expando declaration; it works because non-strict JS allows
    // loosey goosey assignment on objects.
    config.y = {};
    config.x;
    config.y;
    